@@ -2,6 +2,7 @@ package control;
 
 import java.io.IOException;
 import java.io.PrintWriter;
+import java.text.SimpleDateFormat;
 import java.util.List;
 
 import javax.servlet.ServletException;
@@ -11,19 +12,14 @@ import javax.servlet.http.HttpServletResponse;
 
 import model.Aluno;
 import model.Autor;
+import model.Emprestimo;
+import model.Exemplar;
 import model.Genero;
+import model.Livro;
 import model.Turma;
-import control.persist.Dao;
+import control.persist.Modelo;
 
 public class Servlet extends HttpServlet {
-
-	private Dao dao;
-
-	private Dao dao() {
-		if (dao == null)
-			dao = new Dao();
-		return dao;
-	}
 
 	public void doPost(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
@@ -33,47 +29,62 @@ public class Servlet extends HttpServlet {
 	public void doGet(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
 
-		dao().transacao();
-
-		if (dao().todos(Autor.class).size() == 0) {
-
-			Autor a0 = new Autor();
-			dao().salvar(a0);
-			dao().excluir(a0.getId(), Autor.class);
-
-			Autor a00 = new Autor();
-			dao().salvar(a00);
-			dao().excluir(a00.getId(), Autor.class);
-
-			Autor a000 = new Autor();
-			dao().salvar(a000);
-			dao().excluir(a000.getId(), Autor.class);
+		if (new Autor().buscar().size() == 0) {
 
 			Autor a1 = new Autor();
 			a1.setNome("Pedrinho de Souza");
-			dao().salvar(a1);
+			a1.salvar();
 
 			Autor a2 = new Autor();
 			a2.setNome("Joãozinho Ferreira");
-			dao().salvar(a2);
+			a2.salvar();
+
+			Autor a3 = new Autor();
+			a3.setNome("Jopilandro Silva");
+			a3.salvar();
+
+			Autor a4 = new Autor();
+			a4.setNome("Pedrovaldo Lima");
+			a4.salvar();
+
+			Autor a5 = new Autor();
+			a5.setNome("Jurandi");
+			a5.salvar();
 
 			Genero g1 = new Genero();
 			g1.setNome("Romance");
-			dao().salvar(g1);
+			g1.salvar();
 
 			Genero g2 = new Genero();
 			g2.setNome("Ficcao");
-			dao().salvar(g2);
+			g2.salvar();
 
 			Turma t1 = new Turma();
 			t1.setNome("101");
-			dao().salvar(t1);
+			t1.salvar();
 
 			Aluno aluno1 = new Aluno();
-			aluno1.setNome("Zezinho Peralta");
+			aluno1.setNome("Jorginho Peralta");
 			aluno1.setTurma(t1);
 			aluno1.setMatricula("32");
-			dao().salvar(aluno1);
+			aluno1.salvar();
+
+			Livro l = new Livro();
+			l.setNome("O Gato Comeu");
+			l.setGenero(g2);
+			l.setAutor(a1);
+			l.salvar();
+
+			Emprestimo e = new Emprestimo();
+			e.setExemplar(l.getExemplares().get(0));
+			e.setAluno(aluno1);
+			try {
+				e.setRetirada(new SimpleDateFormat("dd/MM/yyyy")
+						.parse("02/04/2012"));
+			} catch (Exception ex) {
+				ex.printStackTrace();
+			}
+			e.salvar();
 
 			int a = 0;
 
@@ -83,176 +94,297 @@ public class Servlet extends HttpServlet {
 		String uri = request.getRequestURI();
 		if (!uri.endsWith("/"))
 			uri += "/";
-		if (uri.endsWith("/autor/"))
-			jsp = autor(request);
+		if (uri.endsWith("/autores/"))
+			jsp = autorListar(request);
 		else if (uri.endsWith("/autor/incluir/"))
 			jsp = autorIncluir(request);
 		else if (uri.endsWith("/autor/alterar/"))
 			jsp = autorAlterar(request);
 		else if (uri.endsWith("/autor/excluir/"))
 			jsp = autorExcluir(request);
-		else if (uri.endsWith("/genero/"))
-			jsp = genero(request);
+		else if (uri.endsWith("/generos/"))
+			jsp = generoListar(request);
 		else if (uri.endsWith("/genero/incluir/"))
 			jsp = generoIncluir(request);
 		else if (uri.endsWith("/genero/alterar/"))
 			jsp = generoAlterar(request);
 		else if (uri.endsWith("/genero/excluir/"))
 			jsp = generoExcluir(request);
-		else if (uri.endsWith("/aluno/"))
-			jsp = aluno(request);
+		else if (uri.endsWith("/alunos/"))
+			jsp = alunoListar(request);
 		else if (uri.endsWith("/aluno/incluir/"))
 			jsp = alunoIncluir(request);
 		else if (uri.endsWith("/aluno/alterar/"))
 			jsp = alunoAlterar(request);
 		else if (uri.endsWith("/aluno/excluir/"))
 			jsp = alunoExcluir(request);
-		else if (uri.endsWith("/turma/"))
-			jsp = turma(request);
+		else if (uri.endsWith("/turmas/"))
+			jsp = turmaListar(request);
 		else if (uri.endsWith("/turma/incluir/"))
 			jsp = turmaIncluir(request);
 		else if (uri.endsWith("/turma/alterar/"))
 			jsp = turmaAlterar(request);
 		else if (uri.endsWith("/turma/excluir/"))
 			jsp = turmaExcluir(request);
+		else if (uri.endsWith("/livros/"))
+			jsp = livroListar(request);
+		else if (uri.endsWith("/livro/incluir/"))
+			jsp = livroIncluir(request);
+		else if (uri.endsWith("/livro/alterar/"))
+			jsp = livroAlterar(request);
+		else if (uri.endsWith("/livro/excluir/"))
+			jsp = livroExcluir(request);
+		else if (uri.endsWith("/emprestimos/"))
+			jsp = emprestimoListar(request);
+		else if (uri.endsWith("/emprestimo/incluir/"))
+			jsp = emprestimoIncluir(request);
+		else if (uri.endsWith("/emprestimo/alterar/"))
+			jsp = emprestimoAlterar(request);
+		else if (uri.endsWith("/emprestimo/excluir/"))
+			jsp = emprestimoExcluir(request);
 		else
 			jsp = "/paginas/erro.jsp";
 		request.getRequestDispatcher(jsp).forward(request, response);
 
 		PrintWriter out = response.getWriter();
 		out.print(uri);
-
-		dao().commit();
 	}
 
-	public String autor(HttpServletRequest request) {
-		List<Autor> lista = dao().todos(Autor.class);
+	public String autorListar(HttpServletRequest request) {
+		List<Autor> lista = new Autor().buscar();
 		request.setAttribute("autores", lista);
-		return "/paginas/autor.jsp";
+		return "/paginas/autores.jsp";
 	}
 
 	public String autorIncluir(HttpServletRequest request) {
 		Autor autor = new Autor();
 		autor.setNome(request.getParameter("nome"));
-		dao().salvar(autor);
+		autor.salvar();
 		request.setAttribute("autor", autor);
 		return "/paginas/autor_incluido.jsp";
 	}
 
 	public String autorAlterar(HttpServletRequest request) {
-		Autor autor = (Autor) dao().porId(Autor.class,
-				Long.valueOf(request.getParameter("id")));
+		Autor autor = new Autor().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
 		autor.setNome(request.getParameter("nome"));
-		dao().salvar(autor);
+		autor.salvar();
 		request.setAttribute("autor", autor);
 		return "/paginas/autor_incluido.jsp";
 	}
 
 	public String autorExcluir(HttpServletRequest request) {
 		Long id = new Long(request.getParameter("id"));
-		dao().excluir(id, Autor.class);
+		Autor autor = new Autor().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
+		autor.excluir();
 		request.setAttribute("id", id);
 		return "/paginas/autor_excluido.jsp";
 	}
 
-	public String genero(HttpServletRequest request) {
-		List<Genero> lista = dao().todos(Genero.class);
+	public String generoListar(HttpServletRequest request) {
+		List<Genero> lista = new Genero().buscar();
 		request.setAttribute("generos", lista);
-		return "/paginas/genero.jsp";
+		return "/paginas/generos.jsp";
 	}
 
 	public String generoIncluir(HttpServletRequest request) {
 		Genero genero = new Genero();
 		genero.setNome(request.getParameter("nome"));
-		dao().salvar(genero);
+		genero.salvar();
 		request.setAttribute("genero", genero);
 		return "/paginas/genero_incluido.jsp";
 	}
 
 	public String generoAlterar(HttpServletRequest request) {
-		Genero genero = (Genero) dao().porId(Genero.class,
-				Long.valueOf(request.getParameter("id")));
+		Genero genero = new Genero().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
 		genero.setNome(request.getParameter("nome"));
-		dao().salvar(genero);
+		genero.salvar();
 		request.setAttribute("genero", genero);
 		return "/paginas/genero_incluido.jsp";
 	}
 
 	public String generoExcluir(HttpServletRequest request) {
-		Long id = new Long(request.getParameter("id"));
-		dao().excluir(id, Genero.class);
+		Long id = Long.valueOf(request.getParameter("id"));
+		new Genero().setId(id).buscarUm().excluir();
 		request.setAttribute("id", id);
 		return "/paginas/genero_excluido.jsp";
 	}
 
-	public String aluno(HttpServletRequest request) {
-		List<Aluno> lista = dao().todos(Aluno.class);
+	public String alunoListar(HttpServletRequest request) {
+		List<Aluno> lista = new Aluno().buscar();
 		request.setAttribute("alunos", lista);
-		List<Turma> listaTurmas = dao().todos(Turma.class);
+		List<Turma> listaTurmas = new Turma().buscar();
 		request.setAttribute("turmas", listaTurmas);
-		return "/paginas/aluno.jsp";
+		return "/paginas/alunos.jsp";
 	}
 
 	public String alunoIncluir(HttpServletRequest request) {
 		Aluno aluno = new Aluno();
 		aluno.setNome(request.getParameter("nome"));
 		aluno.setMatricula(request.getParameter("matricula"));
-		Turma t = (Turma) dao().porId(Turma.class,
-				Long.valueOf(request.getParameter("turma")));
-		aluno.setTurma(t);
-		dao().salvar(aluno);
+		aluno.setTurma(new Turma().setId(
+				Long.valueOf(request.getParameter("turma"))).buscarUm());
+		aluno.salvar();
 		request.setAttribute("aluno", aluno);
 		return "/paginas/aluno_incluido.jsp";
 	}
 
 	public String alunoAlterar(HttpServletRequest request) {
-		Aluno aluno = (Aluno) dao().porId(Aluno.class,
-				Long.valueOf(request.getParameter("id")));
+		Aluno aluno = new Aluno().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
 		aluno.setNome(request.getParameter("nome"));
 		aluno.setMatricula(request.getParameter("matricula"));
-		Turma t = (Turma) dao().porId(Turma.class,
-				Long.valueOf(request.getParameter("turma")));
+		Turma t = new Turma()
+				.setId(Long.valueOf(request.getParameter("turma"))).buscarUm();
 		aluno.setTurma(t);
-		dao().salvar(aluno);
+		aluno.salvar();
 		request.setAttribute("aluno", aluno);
 		return "/paginas/aluno_incluido.jsp";
 	}
 
 	public String alunoExcluir(HttpServletRequest request) {
 		Long id = new Long(request.getParameter("id"));
-		dao().excluir(id, Aluno.class);
+		new Aluno().setId(id).buscarUm().excluir();
 		request.setAttribute("id", id);
 		return "/paginas/aluno_excluido.jsp";
 	}
 
-	public String turma(HttpServletRequest request) {
-		List<Turma> lista = dao().todos(Turma.class);
+	public String turmaListar(HttpServletRequest request) {
+		List<Turma> lista = new Turma().buscar();
 		request.setAttribute("turmas", lista);
-		return "/paginas/turma.jsp";
+		return "/paginas/turmas.jsp";
 	}
 
 	public String turmaIncluir(HttpServletRequest request) {
 		Turma turma = new Turma();
 		turma.setNome(request.getParameter("nome"));
-		dao().salvar(turma);
+		turma.salvar();
 		request.setAttribute("turma", turma);
 		return "/paginas/turma_incluido.jsp";
 	}
 
 	public String turmaAlterar(HttpServletRequest request) {
-		Turma turma = (Turma) dao().porId(Turma.class,
-				Long.valueOf(request.getParameter("id")));
+		Turma turma = new Turma().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
 		turma.setNome(request.getParameter("nome"));
-		dao().salvar(turma);
+		turma.salvar();
 		request.setAttribute("turma", turma);
 		return "/paginas/turma_incluido.jsp";
 	}
 
 	public String turmaExcluir(HttpServletRequest request) {
 		Long id = new Long(request.getParameter("id"));
-		dao().excluir(id, Turma.class);
+		new Turma().setId(id).buscarUm().excluir();
 		request.setAttribute("id", id);
 		return "/paginas/turma_excluida.jsp";
+	}
+
+	public String livroListar(HttpServletRequest request) {
+		List<Livro> lista = new Livro().buscar();
+		request.setAttribute("livros", lista);
+		List<Autor> listaAutores = new Autor().buscar();
+		request.setAttribute("autores", listaAutores);
+		List<Genero> listaGeneros = new Genero().buscar();
+		request.setAttribute("generos", listaGeneros);
+		return "/paginas/livros.jsp";
+	}
+
+	public String livroIncluir(HttpServletRequest request) {
+		Livro livro = new Livro();
+		livro.setNome(request.getParameter("nome"));
+		livro.setGenero(new Genero().setId(
+				Long.valueOf(request.getParameter("genero"))).buscarUm());
+		livro.setAutor(new Autor().setId(
+				Long.valueOf(request.getParameter("autor"))).buscarUm());
+		livro.salvar();
+		request.setAttribute("livro", livro);
+		return "/paginas/livro_incluido.jsp";
+	}
+
+	public String livroAlterar(HttpServletRequest request) {
+		Livro livro = new Livro().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
+		livro.setNome(request.getParameter("nome"));
+		livro.setGenero(new Genero().setId(
+				Long.valueOf(request.getParameter("genero"))).buscarUm());
+		livro.setAutor(new Autor().setId(
+				Long.valueOf(request.getParameter("autor"))).buscarUm());
+		livro.salvar();
+		request.setAttribute("livro", livro);
+		return "/paginas/livro_incluido.jsp";
+	}
+
+	public String livroExcluir(HttpServletRequest request) {
+		Long id = new Long(request.getParameter("id"));
+		new Livro().setId(id).buscarUm().excluir();
+		request.setAttribute("id", id);
+		return "/paginas/livro_excluido.jsp";
+	}
+
+	public String emprestimoListar(HttpServletRequest request) {
+		List<Emprestimo> lista = new Emprestimo().buscar();
+		request.setAttribute("emprestimos", lista);
+		List<Exemplar> listaLivros = new Exemplar().buscar();
+		request.setAttribute("exemplares", listaLivros);
+		List<Aluno> listaAlunos = new Aluno().buscar();
+		request.setAttribute("alunos", listaAlunos);
+		return "/paginas/emprestimos.jsp";
+	}
+
+	public String emprestimoIncluir(HttpServletRequest request) {
+		Emprestimo emprestimo = new Emprestimo();
+		try {
+			emprestimo.setRetirada(new SimpleDateFormat("dd/MM/yyyy")
+					.parse(request.getParameter("retirada")));
+		} catch (Exception e) {
+			int b = 9;
+		}
+		try {
+			emprestimo.setDevolucao(new SimpleDateFormat("dd/MM/yyyy")
+					.parse(request.getParameter("devolucao")));
+		} catch (Exception e) {
+			int c = 10;
+		}
+		emprestimo.setAluno(new Aluno().setId(
+				Long.valueOf(request.getParameter("aluno"))).buscarUm());
+		emprestimo.setExemplar(new Exemplar().setId(
+				Long.valueOf(request.getParameter("exemplar"))).buscarUm());
+		emprestimo.salvar();
+		request.setAttribute("emprestimo", emprestimo);
+		return "/paginas/emprestimo_incluido.jsp";
+	}
+
+	public String emprestimoAlterar(HttpServletRequest request) {
+		Emprestimo emprestimo = new Emprestimo().setId(
+				Long.valueOf(request.getParameter("id"))).buscarUm();
+		try {
+			emprestimo.setRetirada(new SimpleDateFormat("dd/MM/yyyy")
+					.parse(request.getParameter("retirada")));
+		} catch (Exception e) {
+
+		}
+		try {
+			emprestimo.setDevolucao(new SimpleDateFormat("dd/MM/yyyy")
+					.parse(request.getParameter("devolucao")));
+		} catch (Exception e) {
+
+		}
+		emprestimo.setAluno(new Aluno().setId(
+				Long.valueOf(request.getParameter("aluno"))).buscarUm());
+		emprestimo.setExemplar(new Exemplar().setId(
+				Long.valueOf(request.getParameter("exemplar"))).buscarUm());
+		emprestimo.salvar();
+		request.setAttribute("emprestimo", emprestimo);
+		return "/paginas/emprestimo_incluido.jsp";
+	}
+
+	public String emprestimoExcluir(HttpServletRequest request) {
+		Long id = new Long(request.getParameter("id"));
+		new Emprestimo().setId(id).buscarUm().excluir();
+		request.setAttribute("id", id);
+		return "/paginas/emprestimo_excluido.jsp";
 	}
 
 }
